--- a/public/index.html
+++ b/public/index.html
@@ -133,6 +133,7 @@
     }
     .cta {
       display: flex;
+      flex-direction: column;
       align-items: center;
       justify-content: center;
       gap: 1rem;
